--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
 
     <com.websarva.wings.android.alarm.CharacterButton
         android:id="@+id/customBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         tools:ignore="MissingClass" />
 
