--- a/app/src/main/res/layout/custom_button.xml
+++ b/app/src/main/res/layout/custom_button.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    style="@style/Widget.AppCompat.Button">
 
-    <LinearLayout
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="200dp"
-        android:layout_height="220dp"
-        android:orientation="vertical"
-        android:layout_marginTop="165dp">
+    <ImageView
+        android:id="@+id/button_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/text"
+        android:src="@drawable/noimage" />
 
-        <ImageView
-            android:layout_width="140dp"
-            android:layout_height="158dp"
-            android:src="@drawable/time" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Time"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-</RelativeLayout>
+    <TextView
+        android:id="@+id/button_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
+        android:textColor="@android:color/black" />
+</LinearLayout>
