--- a/app/src/main/res/layout/activity_timeset.xml
+++ b/app/src/main/res/layout/activity_timeset.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
-        android:layout_height="90dp"
+        android:layout_height="185dp"
         android:layout_marginStart="135dp"
         android:layout_marginTop="40dp"
         android:text="00:00"
@@ -99,6 +99,43 @@
         android:layout_marginTop="16dp"
         android:text="@string/kakunin"
         android:layout_gravity="center"/>
+
+    <EditText
+        android:id="@+id/Alarm_Name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@android:drawable/edit_text"
+        android:hint="@string/TimeName" />
+
+    <TextView
+        android:id="@+id/Set_Alarm_Music"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp"
+        android:text="@string/setAlarmName"/>
+
+    <Button
+        android:id="@+id/Alarm_Music_Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/AlarmMusic"/>
+    
+    <TextView
+        android:id="@+id/SetAfterMusic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/setAfterMusicName"/>
+
+
+    <Button
+        android:id="@+id/After_Music"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/AfterMusic"/>
 
 
 </LinearLayout>
