--- a/app/src/main/res/layout/activity_timeset.xml
+++ b/app/src/main/res/layout/activity_timeset.xml
@@ -137,5 +137,13 @@
         android:layout_height="wrap_content"
         android:text="@string/AfterMusic"/>
 
+    <Button
+        android:id="@+id/btnSaveAlarm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp"
+        android:text="@string/save"/>
+
 
 </LinearLayout>
