--- a/app/src/main/res/layout/custom_button2.xml
+++ b/app/src/main/res/layout/custom_button2.xml
@@ -1,20 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<Button xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/btnAlarmItem"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tvSelectedTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Timestart"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-</RelativeLayout>
+    android:layout_height="wrap_content"
+    android:padding="16dp"
+    android:textSize="18sp" />
