基本機能完成

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -39,7 +39,6 @@
             android:scaleType="fitCenter"
             android:src="@drawable/delete"
             android:layout_marginTop="20dp"/>
-
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -48,4 +47,24 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"/>
 
+    <!-- 削除確定ボタンレイアウト（初期状態は非表示） -->
+    <LinearLayout
+        android:id="@+id/deleteConfirmLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnConfirmDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/delete" />
+
+        <Button
+            android:id="@+id/btnCancelDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="キャンセル" />
+    </LinearLayout>
 </LinearLayout>
