--- a/app/src/main/res/layout/activity_alarm_screen.xml
+++ b/app/src/main/res/layout/activity_alarm_screen.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvAlarmMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Alarm!"
+        android:text="@string/start"
         android:textSize="48sp"
         android:textColor="@android:color/white" />
 
@@ -19,5 +19,5 @@
         android:id="@+id/btnStopAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stop Alarm" />
+        android:text="@string/stopBtn" />
 </LinearLayout>
