--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fillViewport="true">
 
-    <TextClock
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="40dp"
-        android:textSize="60sp"
-        android:timeZone="Asia/Tokyo"
-        android:format24Hour="HH:mm:ss"/>
+        android:orientation="vertical">
 
-    <com.websarva.wings.android.alarm.CharacterButton
-        android:id="@+id/customBtn_alarm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextClock
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="40dp"
+            android:textSize="60sp"
+            android:timeZone="Asia/Tokyo"
+            android:format24Hour="HH:mm:ss"/>
 
-    <com.websarva.wings.android.alarm.CharacterButton
-        android:id="@+id/customBtn_calender"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <com.websarva.wings.android.alarm.CharacterButton
+            android:id="@+id/customBtn_alarm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
+        <com.websarva.wings.android.alarm.CharacterButton
+            android:id="@+id/customBtn_calender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:text="@string/Note"/>
+    </LinearLayout>
+</ScrollView>
