--- a/app/src/main/res/layout/dialog_schedule.xml
+++ b/app/src/main/res/layout/dialog_schedule.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:gravity="top|start"
-        android:hint="ここに予定を入力してください"
+        android:hint="@string/Schedule_input"
         android:inputType="textMultiLine"
         android:background="@android:drawable/edit_text"
         android:textColor="#000000"
